// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HSPDetailPanel should change to wrapped and render when wrapped view is clicked 1`] = `
<aside
  class="sliding-panel sliding-panel--bottom sliding-panel--bottom--medium hsp-detail-panel"
  data-testid="sliding-panel"
>
  <div
    class="sliding-panel__header"
  >
    <span
      class="small sliding-panel__header__title"
    >
      U6MKN0 · rec full Name · scientific name
    </span>
    <button
      class="button tertiary sliding-panel__header__buttons"
      title="Close panel"
      type="button"
    >
      <test-file-stub />
    </button>
  </div>
  <div
    class="sliding-panel__content"
  >
    <div
      class="hsp-detail-panel__body"
    >
      <div
        class="button-group"
      >
        <div
          class="dropdown-container"
        >
          <button
            class="button tertiary dropdown"
            type="button"
          >
            Highlight properties
          </button>
          <div
            class="dropdown-menu"
          />
        </div>
        <div
          class="dropdown-container"
        >
          <button
            class="button tertiary dropdown"
            type="button"
          >
            Select annotation
          </button>
          <div
            class="dropdown-menu"
          />
        </div>
        <fieldset
          class="msa-view-choice"
        >
          View:
          <label>
            <input
              checked=""
              name="view"
              type="radio"
            />
            Overview
          </label>
          <label>
            <input
              name="view"
              type="radio"
            />
            Wrapped
          </label>
        </fieldset>
      </div>
      <div>
        <div
          class="alignment-grid alignment-wrapped"
          data-testid="alignment-wrapped-view"
        >
          <div
            class="track-label track-label--align-labels"
          >
            <span
              class="align-label"
            >
              Query
            </span>
            <button
              class="align-label"
              style="height: 20px;"
              tabindex="-1"
              type="button"
            >
              Match:
              <a
                href="/uniprotkb/U6MKN0"
              >
                U6MKN0
              </a>
            </button>
          </div>
          <div
            class="track"
          >
            <nightingale-msa
              calculate-conservation="true"
              color-scheme="conservation"
              height="40"
              length="45"
              overlay-conservation="true"
            />
          </div>
          <span
            class="right-coord"
          >
            <div
              style="height: 20px;"
            >
              30
            </div>
            <div
              style="height: 20px;"
            >
              445
            </div>
          </span>
          <span
            class="track-label annotation-label"
          >
            U6MKN0:Chain
          </span>
          <div
            class="track annotation-track"
          >
            <protvista-track
              displayend="45"
              displaystart="1"
              layout="non-overlapping"
              length="45"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</aside>
`;

exports[`HSPDetailPanel should initially render overview 1`] = `
<aside
  class="sliding-panel sliding-panel--bottom sliding-panel--bottom--medium hsp-detail-panel"
  data-testid="sliding-panel"
>
  <div
    class="sliding-panel__header"
  >
    <span
      class="small sliding-panel__header__title"
    >
      U6MKN0 · rec full Name · scientific name
    </span>
    <button
      class="button tertiary sliding-panel__header__buttons"
      title="Close panel"
      type="button"
    >
      <test-file-stub />
    </button>
  </div>
  <div
    class="sliding-panel__content"
  >
    <div
      class="hsp-detail-panel__body"
    >
      Match between “query” sequence positions
       
      3
       to 
      30
       and “hit” sequence positions 
      418
       to 
      445
      .
      <div
        class="button-group"
      >
        <div
          class="dropdown-container"
        >
          <button
            class="button tertiary dropdown"
            type="button"
          >
            Highlight properties
          </button>
          <div
            class="dropdown-menu"
          />
        </div>
        <div
          class="dropdown-container"
        >
          <button
            class="button tertiary dropdown"
            type="button"
          >
            Select annotation
          </button>
          <div
            class="dropdown-menu"
          />
        </div>
        <fieldset
          class="msa-view-choice"
        >
          View:
          <label>
            <input
              checked=""
              name="view"
              type="radio"
            />
            Continuous
          </label>
          <label>
            <input
              name="view"
              type="radio"
            />
            Wrapped
          </label>
        </fieldset>
      </div>
      <div>
        <section
          class="alignment-grid"
          data-testid="alignment-view"
        >
          <span
            class="track-label"
          >
            Overview
          </span>
          <div
            class="track"
          >
            <div>
              <nightingale-track-canvas
                display-end="-1"
                display-start="1"
                height="15"
                highlight="418:421"
                highlight-color="#FFEB3B66"
                length="486"
                min-height="10"
                min-width="10"
                style="display: inline-block; line-height: 0; width: 100%; height: 100%;"
              >
                <!---->
                
      
                <div
                  class="container"
                >
                  
        
                  <div
                    style="position: relative; z-index: 0;"
                  >
                    
          
                    <canvas
                      style="position: absolute; left: 0px; top: 0px; z-index: -1; width: 10px; height: 15px;"
                    />
                    
          
                    <svg
                      height="15"
                      style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                      width="10"
                    >
                      <g
                        class="highlighted"
                      />
                    </svg>
                    
        
                  </div>
                  
      
                </div>
                
    
              </nightingale-track-canvas>
              <nightingale-track-canvas
                display-end="-1"
                display-start="1"
                height="15"
                highlight="418:421"
                highlight-color="#FFEB3B66"
                length="486"
                min-height="10"
                min-width="10"
                style="display: inline-block; line-height: 0; width: 100%; height: 100%;"
              >
                <!---->
                
      
                <div
                  class="container"
                >
                  
        
                  <div
                    style="position: relative; z-index: 0;"
                  >
                    
          
                    <canvas
                      style="position: absolute; left: 0px; top: 0px; z-index: -1; width: 10px; height: 15px;"
                    />
                    
          
                    <svg
                      height="15"
                      style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                      width="10"
                    >
                      <g
                        class="highlighted"
                      />
                    </svg>
                    
        
                  </div>
                  
      
                </div>
                
    
              </nightingale-track-canvas>
            </div>
          </div>
          <span
            class="track-label"
            data-testid="track-label"
          >
            U6MKN0:Chain
          </span>
          <div
            class="track"
          >
            <nightingale-track-canvas
              display-end="486"
              display-start="1"
              height="15"
              highlight="418:421"
              highlight-color="#FFEB3B66"
              length="486"
              min-height="10"
              min-width="10"
              style="display: inline-block; line-height: 0; width: 100%; height: 100%;"
            >
              <!---->
              
      
              <div
                class="container"
              >
                
        
                <div
                  style="position: relative; z-index: 0;"
                >
                  
          
                  <canvas
                    style="position: absolute; left: 0px; top: 0px; z-index: -1; width: 10px; height: 15px;"
                  />
                  
          
                  <svg
                    height="15"
                    style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
                    width="10"
                  >
                    <g
                      class="highlighted"
                    />
                  </svg>
                  
        
                </div>
                
      
              </div>
              
    
            </nightingale-track-canvas>
          </div>
          <div
            class="track-label track-label--align-labels"
          >
            <span
              class="align-label"
            >
              Query
            </span>
            <button
              class="align-label"
              style="height: 20px;"
              tabindex="-1"
              type="button"
            >
              Match:
              <a
                href="/uniprotkb/U6MKN0"
              >
                U6MKN0
              </a>
            </button>
          </div>
          <div
            class="track"
          >
            <nightingale-manager
              reflected-attributes="highlight,display-start,display-end"
              style="display: block; line-height: 0;"
            >
              <nightingale-navigation
                height="40"
                length="28"
              />
              <!---->
            </nightingale-manager>
          </div>
          <div
            class="right-coord"
          >
            <div
              style="height: 20px;"
            >
              3
            </div>
            <div
              style="height: 20px;"
            >
              3
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>
</aside>
`;
